--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.basic_app_">
+    package="com.example.designcode">
    <application
-        android:label="basic_app_"
+        android:label="designcode"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
