--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^7.0.0
+  sliding_up_panel: ^1.0.2
 
 dev_dependencies:
   flutter_test:
