--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   sliding_up_panel: ^1.0.2
   firebase_core: ^0.7.0
+  firebase_auth: ^0.20.0+1
 
 dev_dependencies:
   flutter_test:
